[project]
name = "gs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "langchain==0.3.27",
    "langchain-core==0.3.72",
    "leidenalg==0.10.2",
    "networkx==3.4.2",
    "numpy==2.3.2",
    "openai==1.98.0",
    "pydantic==2.11.7",
    "python-igraph==0.11.9",
    "transformers==4.50.0",
    "uvicorn==0.35.0",
]
