[project]
name = "gs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "langchain==0.3.27",
    "langchain-core==0.3.72",
    "leidenalg==0.10.2",
    "networkx==3.4.2",
    "numpy==2.3.2",
    "openai==1.98.0",
    "pydantic==2.11.7",
    "python-igraph==0.11.9",
    "transformers==4.50.0",
    "uvicorn==0.35.0",
    # Frontend dependencies
    "streamlit==1.41.0",
    "streamlit-option-menu==0.4.0",
    "httpx==0.28.1",
    "requests==2.32.3",
    "pillow==11.1.0",
    "scipy>=1.17.0",
    "smolagents>=1.24.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4

exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".streamlit",
    "storage",
    "build",
    "dist",
    # Submodules
    "drhyper",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
]

ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["gs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",                    # verbose output
    "--strict-markers",      # unknown markers cause errors
    "--tb=short",            # shorter traceback format
    "--color=yes",           # colored output
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, use database)",
    "slow: Slow-running tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning"
]
